# io-mcp

./: .envrc  .gitignore  .io-mcp.yml  .worktreeinclude  AGENTS.md  README.md  flake.nix  justfile  mcp-config.json  pyproject.toml
.beads/: beads.db  issues.jsonl  last-touched
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: fiction.md  io-mcp.md
agents/: enforce-background.sh  io-mcp-admin.md  io-mcp.md  nudge-speak.sh  report-activity.sh
android/: .gitignore  flake.nix  settings.gradle.kts
docs/: inbox-model-design.md  index.html  styles.css
hooks/: enforce-choices.sh  nudge-speak.sh  start-register.sh
scripts/: force-build.sh
tests/: test_auto_reply.py  test_cache_cli.py  test_chat_autoscroll.py  test_chat_view.py  test_config.py  test_dwell_config.py  test_edge_cases.py  test_error_recovery.py  test_freeform_reply_tag.py  test_frontend_api.py  test_haptic_patterns.py  test_jk_navigation.py  test_logging_and_cli.py  test_mcp_server.py  test_new_config.py  test_notifications.py  test_position_indicator.py  test_pregen_priority.py  test_proxy_health.py  test_ring_integration.py  test_scroll_acceleration.py  test_scroll_boundary_cues.py  test_scroll_config.py  test_scroll_speed_profile.py  test_scroll_wrap.py  test_selection_feedback.py  test_session_api.py  test_settings.py  test_speed_profiles.py  test_stale_cleanup.py  test_state.py  test_subprocess_manager.py  test_tab_summary.py  test_tts.py  test_tts_recovery.py  test_tts_suppression.py  test_tui_modules.py  test_tui_pilot.py  test_undo_history.py  test_voice_button.py  (+1 more)
(+44 files in other folders)
