[project]
name = "io-mcp"
version = "0.1.0"
description = "MCP server for agent I/O — scroll-wheel multi-choice input and TTS narration for hands-free Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
io-mcp = "io_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/io_mcp"]
