[project]
name = "io-mcp"
version = "0.1.0"
description = "MCP server for agent I/O — scroll-wheel multi-choice input and TTS narration for hands-free Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "pyyaml>=6.0",
    "textual>=8.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[dependency-groups]
dev = ["editables>=0.5"]

[project.scripts]
io-mcp = "io_mcp.__main__:main"
io-mcp-msg = "io_mcp.cli:main"
io-mcp-send = "io_mcp.send:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/io_mcp"]
